--- a/website-content/css/navigation.css
+++ b/website-content/css/navigation.css
@@ -32,8 +32,10 @@ header {
 }
 
 .site-title {
-    font-size: 1.5rem;
+    font-size: 2.1rem;
     margin: 0;
+    color: #fff;
+    font-weight: 800;
 }
 
 /* ===========================
